[gd_scene load_steps=6 format=2]

[ext_resource path="res://Units/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://World/Arena.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/World.gd" type="Script" id=3]
[ext_resource path="res://UI/PausePopupMenu.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.12549, 0.12549, 0.12549, 0.894118 )

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]
num_segments = 18
len_segments = 15

[node name="Arena" parent="." instance=ExtResource( 2 )]
player_node_path = NodePath("../Player")
arena_width = 1000
arena_chunk_height = 1000
platform_spawn_disable_margin = 50

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PopupMenu" type="PopupMenu" parent="CanvasLayer"]
pause_mode = 2
margin_right = 4000.0
margin_bottom = 3000.0
custom_styles/panel = SubResource( 1 )
popup_exclusive = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="CanvasLayer/PopupMenu"]
margin_left = 338.0
margin_top = 174.0
margin_right = 635.0
margin_bottom = 231.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="CanvasLayer/PopupMenu"]
margin_left = 338.0
margin_top = 244.0
margin_right = 638.0
margin_bottom = 311.0
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="CanvasLayer/PopupMenu"]
margin_left = 338.0
margin_top = 327.0
margin_right = 644.0
margin_bottom = 378.0
text = "Restart"

[connection signal="player_died" from="Player" to="." method="_on_Player_player_died"]
[connection signal="about_to_show" from="CanvasLayer/PopupMenu" to="." method="_on_PopupMenu_about_to_show"]
[connection signal="popup_hide" from="CanvasLayer/PopupMenu" to="." method="_on_PopupMenu_popup_hide"]
[connection signal="pressed" from="CanvasLayer/PopupMenu/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="CanvasLayer/PopupMenu/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="CanvasLayer/PopupMenu/Restart" to="." method="_on_Restart_pressed"]
